packages/vite-plugin-sitemap/tests/fixtures/valid/empty-sitemap.ts
/**
 * Empty sitemap - edge case fixture.
 * Tests handling of empty route arrays.
 */

import type { Route } from "../../../src/types/sitemap";

export default [] satisfies Route[];
